add new facebook links

--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,9 @@ email: qianlifu12345@126.com
 email_full: mailto:qianlifu12345@126.com
 website: qianlifu12345.github.io
 website_full: https://qianlifu12345.github.io
-github: trending
-twitter: twitter
+github: qianlifu12345
+twitter: qianlifu12345
+facebook : bob.qian.830
 tel: + (86) 18566258670
 tel_full: tel:+ (86) 18566258670
 google_maps: 'http://j.map.baidu.com/0nfE8'
